--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>vue-pl</title><link href=/css/app.812ccad0.css rel=preload as=style><link href=/js/app.316e183b.js rel=preload as=script><link href=/js/chunk-vendors.ca3afa9a.js rel=preload as=script><link href=/css/app.812ccad0.css rel=stylesheet></head><body><noscript><strong>We're sorry but vue-pl doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.ca3afa9a.js></script><script src=/js/app.316e183b.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+     <title>个人简历</title>
+     <meta charset=UTF-8 />
+     <style type=text/css>   /*声明其内容为标准的css*/
+       *{
+          margin: 0;
+          padding: 0;
+          border: none;
+          font-size: 12px;
+        }  /*”*“为通配符选择器，将所有的元素设置为外边距margin和内边距padding为0，无边框，字体大小为12像素*/     
+       #resume{
+          width: 800px;
+          margin: 0 auto;   /*外边距上下为0，左右自适应，为了使DIV在浏览器中水平居中*/
+          border: solid 1px #DCDDDF;
+        }
+       #resume .one{
+          background: url(beijing.jpg);
+          width: 800px;
+          height: 90px;
+          font-size: 30px;
+          color: red;
+          font-weight: bold; /*定义粗体字符*/
+          text-align: center;
+          margin-bottom: 0; /*下外边框设置为0*/
+          line-height: 90px;
+        }
+		
+       #resume ul{
+          width: 780px;
+          margin-left: 13px;
+          margin-top: 20px;
+        }
+       #resume ul li{
+          font-size: 20px;
+          background: url(li.png) no-repeat;/*设置图片不重复*/
+          list-style: none;
+          text-indent: 2em; /*规定文本块中首行文字的缩进，em为相对单位*/
+          line-height: 30px;   /*行间距离为30像素*/
+          margin-bottom: 20px;
+          border-bottom: 1px solid #DCDDDF;
+        }
+       #resume ul li.none1{
+          border-bottom: none;  /*将id为resume中的ul 且class为none1的li去掉下边框*/
+        }
+       #resume ul li p{
+          font-size: 15px;
+        }  /*将id为resume中的ul li 下的p标签的字体设置为15像素*/
+     </style>
+</head>
+<body>
+    <div id="resume">
+     <div class="one">个人简历</div>
+     <ul>
+       <li>个人信息
+         <p>
+           姓名：陈子寒;
+           性别：男;
+           籍贯：江西抚州;
+           年龄: 19;
+         </p>
+         <p>
+           手机：1316961XXXX;
+           学校：南方IT学院;
+           专业：软件工程;
+           学历：本科;
+         </p>
+       </li>
+       <li>教育背景
+         <p>
+           2012.9-2016.6: 南方IT学院 软件工作专业
+         </p>
+         <p>
+           在校期间学会用Maven项目管理 SSM 建立的JavaWeb项目
+         </p>
+       </li>
+       <li class="none1">自我评价
+         <p>
+           中肯、客观的自我评定……
+         </p>
+       </li>
+     </ul>
+    </div>
+</body>
+</html>
