--- a/index.html
+++ b/index.html
@@ -72,8 +72,20 @@
            2012.9-2016.6: 南方IT学院 软件工作专业
          </p>
          <p>
-           在校期间学会用Maven项目管理 SSM 建立的JavaWeb项目
+           计算机语言: 熟悉 C# 语言，熟悉 Java 语言
          </p>
+		 <p>
+			熟练使用 JavaScript 脚本语言
+		 </p>
+		 <p>
+			数据库： 熟练使用 SqlServer 、 MySQL 、Sqlite 等数据库语言
+		 </p>
+		 <p>
+			框架 : Spring 核心框架、SpringMVC、Redis内存数据库、Mybatis框架
+		 </p>
+		 <p>
+			编程软件： Eclipse 、 IDEA
+		 </p>
        </li>
        <li class="none1">自我评价
          <p>
