--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 		
 		<div id="name">
 			<h1 class="quickFade delayTwo">陈子寒</h1>
-			<h2 class="quickFade delayThree">Job Title</h2>
+			<h2 class="quickFade delayThree">寻求 Java 后台开发</h2>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>QQ: <a href="mailto:joe@bloggs.com" target="_blank">1452064592</a></li>
+				<li>QQ：1452064592</li>
+				<li>电话：13169618695</li>
 				<li>微信: <a href="http://www.bloggs.com">先占着</a></li>
 				<li>GitHub:<a href= "https://github.com/wd216">个人 github</a></li>
 			</ul>
@@ -93,6 +94,12 @@
 					<h2>Web开发</h2>
 					<!--<p class="subDetails">October 2004 - December 2006</p>-->
 					<p>熟练掌握以Spring、Spring MVC、MyBatis3大框架为核心的Web项目开发 ;</p>
+				</article>
+				
+				<article>
+					<h2>前端技术</h2>
+					<!--<p class="subDetails">October 2004 - December 2006</p>-->
+					<p></p>
 				</article>
 			</div>
 			<div class="clear"></div>
