--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<article>
 					<h2>前端技术</h2>
 					<!--<p class="subDetails">October 2004 - December 2006</p>-->
-					<p></p>
+					<p>bootstrap,vue,element-ui,javascript</p>
 				</article>
 			</div>
 			<div class="clear"></div>
